@@ -1,0 +1,63 @@
+
+
+<dl>
+  <dt>Questions or comments?</dt>
+  <dd>
+    Send mail to <tt><a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a></tt>
+    (mailing list
+    <a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">info</a>,
+    search
+    <a href="http://mail.gnu.org/archive/html/lilypond-user/">archive</a>)
+    <br>
+  </dd>
+
+  <dt>Bug report?</dt>
+  <dd>
+    Send mail to 
+    <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
+    (mailing list
+    <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
+    search
+    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>)
+    <br>
+  </dd>
+
+  <dt>Get notified of new releases?</dt>
+  <dd>Subscribe to
+    <tt><a href="mailto:info-lilypond@gnu.org">info-lilypond@gnu.org</a></tt>
+    (mailing list
+    <a href="http://mail.gnu.org/mailman/listinfo/info-lilypond">info</a>,
+    search
+    <a href="http://mail.gnu.org/archive/html/info-lilypond/">archive</a>)
+  </dd>
+
+  
+  <dt>Comments on these pages?</dt>
+  <dd>Send mail to  
+    <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
+    (mailing list
+    <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
+    search
+    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>)
+  </dd>
+
+  
+  <dt>Contact the developers?<dt>
+  <dd>Subscribe to
+    <tt><a href="mailto:lilypond-devel@gnu.org">lilypond-devel@gnu.org</a></tt>
+    (mailing list 
+    <a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">info</a>,
+    search
+    <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archive</a>)
+  </dd>
+
+  <dt>
+    Contact the authors directly?</dt>
+    <dd>
+    See
+    <a href="@DOC@v2.4/Documentation/topdocs/out-www/AUTHORS.html">the
+      author list</a>.
+    (<em>Only contact the authors directly for strictly personal
+      communication</em>)
+  </dd>
+</dl>
